--- a/about.html
+++ b/about.html
@@ -18,9 +18,9 @@ header-img: "img/post-bg-rwd.jpg"
     <blockquote><p>冰冻三尺 非一日之寒<br>
     积土成山 非斯须之作</p></blockquote>
 
-    <p>Hey，我是<strong>开水(Korpse)</strong>，毕业于四川大学计算机学院，目前就读于华东师范大学大学的软件学院</p>
+    <p>Hey，我是<strong>开水(Korpse)</strong>，毕业于四川大学计算机学院，就读于华东师范大学软件学院</p>
 
-    <p>研究生研究方向是内存数据库，吃力不讨好，论文难发，但是相对比较喜欢的方向</p>
+    <p>研究方向是内存数据库，吃力不讨好但算是感兴趣</p>
 
     <p>除了代码，业余时间会健身，滑板，游泳...</p>
 
