Don't live like a fucking corpse.

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-description: "Don't live like a corpse, be colorful."
+description: "Don't live like a fucking corpse."
 ---
 
 {% for post in paginator.posts %}
